Refatorando WordManager